microconfig-core/src/test/resources/repo/components/exceptions/bad/badDelimeter/exception.p
Property must contain ':' or '='.
Bad property: keyvalue in ../components/exceptions/bad/badDelimeter/application.p.properties:1